--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,5 +28,8 @@ async-trait = "0.1"
 reqwest = { version = "0.11", features = ["json"] }
 
 [dev-dependencies]
-tokio-test = "0.4"
+tokio = { version = "1.0", features = ["full", "test-util"] }
 tower = { version = "0.4", features = ["util"] }
+rand = "0.8"
+serde_json = "1.0"
+hex = "0.4"
